--- a/Index.css
+++ b/Index.css
@@ -8,21 +8,21 @@
 /* Body styling */
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    color: #333;
-    line-height: 1.6;
+    background-color: blue;
+    color: #444;
+    line-height: 1.7;
 }
 
 /* Container */
 .container {
-    width: 80%;
+    width: 90%;
     margin: auto;
     overflow: hidden;
 }
 
 /* Header */
 header {
-    background: #333;
+    background: #blue;
     color: #blue;
     padding-top: 30px;
     min-height: 70px;
@@ -109,8 +109,8 @@ main .content .box {
 
 /* Footer */
 footer {
-    background: #333;
-    color: #fff;
+    background: #blue;
+    color: #green;
     text-align: center;
     padding: 20px 0;
     margin-top: 20px;
