--- a/Index.css
+++ b/Index.css
@@ -1,17 +1,17 @@
 body {
-    background-color: #f8f9fa;
-    color: #343a40;
+    background-color:green;
+    color:blue;
     font-family: Arial, sans-serif;
 }
 
 .shop-title {
-    color: #007bff;
+    color: red;
     font-size: 3rem;
     margin-top: 20px;
 }
 
 .shop-slogan {
-    color: #6c757d;
+    color: blue;
     font-style: italic;
 }
 
@@ -32,7 +32,7 @@ body {
 
 .product-name {
     font-size: 1.5rem;
-    color: #343a40;
+    color: red;
     margin-bottom: 10px;
 }
 
@@ -46,14 +46,14 @@ body {
 
 .product-price {
     font-size: 1.2rem;
-    color: #28a745;
+    color: red;
     font-weight: bold;
     margin-bottom: 10px;
 }
 
 .orders-label {
     font-size: 1.5rem;
-    color: #343a40;
+    color: red;
 }
 
 .total-input, .cash-input, .change-input {
